; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/riched20/extr_editor.c_init_paste_formats.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/riched20/extr_editor.c_init_paste_formats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.paste_format = type { i64, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@init_paste_formats.done = internal global i32 0, align 4
@paste_formats = common dso_local global %struct.paste_format* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @init_paste_formats to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_paste_formats() #0 {
  %1 = alloca %struct.paste_format*, align 8
  %2 = load i32, i32* @init_paste_formats.done, align 4
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %30, label %4

4:                                                ; preds = %0
  %5 = load %struct.paste_format*, %struct.paste_format** @paste_formats, align 8
  store %struct.paste_format* %5, %struct.paste_format** %1, align 8
  br label %6

6:                                                ; preds = %26, %4
  %7 = load %struct.paste_format*, %struct.paste_format** %1, align 8
  %8 = getelementptr inbounds %struct.paste_format, %struct.paste_format* %7, i32 0, i32 1
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %29

12:                                               ; preds = %6
  %13 = load %struct.paste_format*, %struct.paste_format** %1, align 8
  %14 = getelementptr inbounds %struct.paste_format, %struct.paste_format* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %25

17:                                               ; preds = %12
  %18 = load %struct.paste_format*, %struct.paste_format** %1, align 8
  %19 = getelementptr inbounds %struct.paste_format, %struct.paste_format* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = call i64 @RegisterClipboardFormatW(i64 %20)
  %22 = load %struct.paste_format*, %struct.paste_format** %1, align 8
  %23 = getelementptr inbounds %struct.paste_format, %struct.paste_format* %22, i32 0, i32 1
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  store i64 %21, i64* %24, align 8
  br label %25

25:                                               ; preds = %17, %12
  br label %26

26:                                               ; preds = %25
  %27 = load %struct.paste_format*, %struct.paste_format** %1, align 8
  %28 = getelementptr inbounds %struct.paste_format, %struct.paste_format* %27, i32 1
  store %struct.paste_format* %28, %struct.paste_format** %1, align 8
  br label %6

29:                                               ; preds = %6
  store i32 1, i32* @init_paste_formats.done, align 4
  br label %30

30:                                               ; preds = %29, %0
  ret void
}

declare dso_local i64 @RegisterClipboardFormatW(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
